--- a/frontend/front-tpfinal/angular.json
+++ b/frontend/front-tpfinal/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "703ccc4b-b8bc-4023-a3c8-103d55f71c03"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
