--- a/frontend/front-tpfinal/package.json
+++ b/frontend/front-tpfinal/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "jquery": "^3.7.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
