--- a/frontend/front-tpfinal/package.json
+++ b/frontend/front-tpfinal/package.json
@@ -18,9 +18,9 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "bootstrap": "^5.3.0",
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.10.5",
-    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
