--- a/frontend/front-tpfinal/package.json
+++ b/frontend/front-tpfinal/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@popperjs/core": "^2.9.2",
+    "@types/googlemaps": "^3.43.3",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.10.5",
     "rxjs": "~7.5.0",
