--- a/frontend/front-tpfinal/package.json
+++ b/frontend/front-tpfinal/package.json
@@ -22,6 +22,7 @@
     "@types/googlemaps": "^3.43.3",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.10.5",
+    "print-js": "^1.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
